--- a/Views/Partials/_FunActivity.cshtml
+++ b/Views/Partials/_FunActivity.cshtml
@@ -13,7 +13,7 @@
             </p>
         </div>
         <div class="col-lg-12 col-sm-12 col-md-12 col-12">
-            <img src="~/image/biztechnosys/aboutus/event.png" alt="">
+            <img src="~/image/biztechnosys/aboutus/event.png" alt="life at biztechnosys">
         </div>
     </div>
 </section>
