--- a/Views/FileDownload/OnFileDownload.cshtml
+++ b/Views/FileDownload/OnFileDownload.cshtml
@@ -3,10 +3,11 @@
 @{
     IPublishedContent selectedProperty = (IPublishedContent)Model.GetProperty("fileIcon").Value();
     DateTime publishedDate = selectedProperty.UpdateDate;
-    
+
     var fileIcon = (IPublishedContent)Model.Value("fileIcon");
-    var downloadMe = Model.GetProperty("uploadFile").Value(); 
+    var downloadMe = Model.GetProperty("uploadFile").Value();
     DateRepresentation dateRepsentation = new DateRepresentation();
+    var altText = "";
 }
 
 <script src="@Url.Content("~/Scripts/jquery-3.3.1.min.js")" type="text/javascript"></script>
@@ -47,7 +48,13 @@
                     <div class="pdfdwnld">
                         <div class="left">
                             <a href="@downloadMe" download>
-                                <img src="@fileIcon.Url" width="100" alt="">
+                                @{
+                                    if(fileIcon != null)
+                                    {
+                                        altText =(string)(fileIcon.Value("altText") != null ? fileIcon.Value("altText") : Model.Name);
+                                    }
+                                 }
+                                <img src="@fileIcon.Url" width="100" alt="@altText">
                             </a>
                             <div class="work_btn">
                                 <a href="#" id="btnDownload" class="btn contact_orange_btn white_border work_them_color white_text GetFile" role="button"><i class="fa fa-download"></i> Download</a>
