--- a/Views/LandingPages/work/ourClients.cshtml
+++ b/Views/LandingPages/work/ourClients.cshtml
@@ -1,6 +1,8 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage
 @using Umbraco.Web;
-@{ var site = Model.Root();}
+@{ var site = Model.Root();
+    var altText = "";
+  }
 <section class="container our_work">
     <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-12">
@@ -15,8 +17,9 @@
             var caseStudies = (IEnumerable<IPublishedContent>)site.GetProperty("sliderComponent").Value();
             foreach (var item in caseStudies)
             {
+                altText =(string)(item.Value("altText").ToString() != "" ? item.Value("altText") : item.Name );
                 <div class="col-lg-3 col-md-3 col-sm-4 col-6 button_hover client_logo">
-                    <img class="img-fluid" src="@item.Url" alt="@item.Name" />
+                    <img class="img-fluid" src="@item.Url" alt="@altText" />
                     @*<button type="button" class="case_study_button btn">
                         <a class="arrow">
                             <span class="view_arrow">view case study</span>
