--- a/Views/Partials/DetailPages/About/Careers/careers.cshtml
+++ b/Views/Partials/DetailPages/About/Careers/careers.cshtml
@@ -10,15 +10,17 @@
             var duration = "3s";
             var direction = "fadeInLeft";
             int pointAt = 1;
+            var altText = "";
             foreach (var Experience in EmployeeList)
             {
                 duration = pointAt == 2 || pointAt == 3 ? "2s" : "3s";
                 direction = pointAt == 1 || pointAt == 2 ? "fadeInLeft" : "fadeInRight";
                 pointAt++;
                 var ExpImage = (IPublishedContent)Experience.GetProperty("experienceImage").Value();
+                altText =(string)(ExpImage.Value("altText").ToString() != "" ? ExpImage.Value("altText") : ExpImage.Name );
                 <div class="col-lg-3 col-md-6 col-sm-6 col-12 wow @direction" data-wow-duration="@duration">
                     <div class="com_feature">
-                        <img class="img-fluid" src="@ExpImage.Url" alt="@ExpImage.Name">
+                        <img class="img-fluid" src="@ExpImage.Url" alt="@altText">
                     </div>
                     <div class="com_p">
                         <h3 class="text-center py-3">@Experience.GetProperty("experienceHeading").Value()</h3>
